helloWorld_FileConfig.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: hello-kubernetes
spec:
    replicas: 3
    selector:
        matchLabels:
            app: hello-kubernetes
    template:
        metadata:
            labels:
                app: hello-kubernetes
        spec:
            containers:
            - name: hello-kubernetes
              image: paulbouwer/hello-kubernetes:1.8
              ports:
              - containerPort: 8080
              volumeMounts:
                - name: config
                  mountPath: "/config"
                  readOnly: true
            volumes:
              - name: config
                configMap:
                  name: hello-kubernetes-config
                  # An array of keys from the ConfigMap to create as files
                  items:
                  - key: "app.properties"
                    path: "app.properties"
